--- a/Example/DropdownDemo/Podfile
+++ b/Example/DropdownDemo/Podfile
@@ -3,6 +3,6 @@ use_frameworks!
 platform :ios, '9.0'
 
 target 'DropdownDemo' do
- pod 'Dropdown', path: '../../'
+ pod 'Dropdowns', path: '../../'
 end
 
